fixing landing page UI on smaller screens

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -26,3 +26,9 @@ a:hover {
 .social-media a:hover {
   transform: scale(1.2);
 }
+
+@media only screen and (max-width: 600px) {
+  .social-media {
+    width: 100%;
+  }
+}
